Reset the height on all <hr>'s to 0

--- a/Ressources/Private/Sass/base/_typography.scss
+++ b/Ressources/Private/Sass/base/_typography.scss
@@ -106,7 +106,7 @@ hr {
   box-sizing: content-box;
 
   display: block;
-  height: 1px;
+  height: 0;
   border: 0;
   border-top: 1px $basicBorderStyle $basicBorderColor;
   padding: 0;
