Rename the .wrapper class to .site-wrapper

--- a/Ressources/Private/Layouts/index.html
+++ b/Ressources/Private/Layouts/index.html
@@ -13,18 +13,18 @@
 	</head>
 	<body>
 		<header class="site-header" role="banner">
-			<div class="wrapper">
+			<div class="site-wrapper">
 
 			</div>
 		</header>
 
 		<div class="site-content" role="main">
-			<div class="wrapper">
+			<div class="site-wrapper">
 			</div>
 		</div>
 
 		<footer class="site-footer" role="contentinfo">
-			<div class="wrapper">
+			<div class="site-wrapper">
 
 			</div>
 		</footer>
