--- a/Ressources/Private/Sass/_settings/_variables.scss
+++ b/Ressources/Private/Sass/_settings/_variables.scss
@@ -106,7 +106,7 @@ $h6-size:               14 !default;
 // =============================================================================
 // Layout
 // =============================================================================
-// Basic layout width (in pixels) - will be set on the '.wrapper' class
+// Basic layout width (in pixels) - will be set on the '.site-wrapper' class
 $layoutWidth:           rs(960) !default;
 
 // Is this layout centered? If set to 'true' the '.wrapper' class will be centered
