--- a/Ressources/Private/Sass/base/_links.scss
+++ b/Ressources/Private/Sass/base/_links.scss
@@ -10,7 +10,7 @@
 $ Links
 ================================================================================ */
 a {
-  color: $linkColor;
+  color: $link-color;
   text-decoration: none;
 
   &:hover,
