--- a/Ressources/Private/Sass/base/_forms.scss
+++ b/Ressources/Private/Sass/base/_forms.scss
@@ -25,21 +25,21 @@ input[type="month"],
 input[type="time"],
 input[type="week"] {
   display: inline-block;
-  height: $baseLineHeight +px;
+  height: $base-line-height +px;
   padding: 0 0.4em;
-  @include rem(margin-bottom, $halfSpacing);
+  @include rem(margin-bottom, $half-spacing);
 
-  background: $contentBackground;
-  border: 1px solid $basicBorderColor;
-  border-radius: $brandBorderRadius;
+  background: $content-background;
+  border: 1px solid $basic-border-color;
+  border-radius: $brand-border-radius;
   @include box-shadow(inset 0 1px 1px rgba(#000, 0.075));
 
   @include font-size(14);
-  color: lighten($baseTextColor, 5%);
+  color: lighten($base-text-color, 5%);
 }
 textarea {
   height: auto; /* Reset height since textareas have the attribute rows="" */
-  min-height: ($baseLineHeight *3) +px; /* Set a min-height for textareas of 3 rows */
+  min-height: ($base-line-height *3) +px; /* Set a min-height for textareas of 3 rows */
 
   resize: vertical; /* So users cannot expand the textarea over its boundaries */
   overflow: auto; /* Removes default vertical scrollbar in IE6/7/8/9. */
@@ -71,15 +71,15 @@ input[type="button"],
 input[type="reset"],
 input[type="submit"] {
   cursor: pointer;
-  margin-bottom: $baseFontSize / 2 +px;
+  margin-bottom: $base-font-size / 2 +px;
   /**
    * Set in em's so we can change the size of the button depending on the font-size
    */
   padding: 0.5em 0.75em;
 
   border: 0;
-  border-radius: $brandBorderRadius;
-  background: $buttonBackground;
+  border-radius: $brand-border-radius;
+  background: $button-background;
 
   font-size: .8em;
   /**
@@ -87,7 +87,7 @@ input[type="submit"] {
    */
   font-weight: normal;
   line-height: 1;
-  color: $buttonColor;
+  color: $button-color;
 }
 
 
@@ -130,8 +130,8 @@ legend {
   @extend %margin-bottom;
 
   @include font-size($h4-size);
-  color: $headingsColor;
-  border-bottom: 1px $basicBorderStyle $basicBorderColor;
+  color: $headings-color;
+  border-bottom: 1px $basic-border-style $basic-border-color;
 
   padding: 0;
   @if $oldIE {
