--- a/Ressources/Private/Sass/base/_headings.scss
+++ b/Ressources/Private/Sass/base/_headings.scss
@@ -11,9 +11,9 @@ $ Headings
 ================================================================================ */
 h1, h2, h3,
 h4, h5, h6 {
-  @if $headingsFontFamily { font-family: $headingsFontFamily; }
-  font-weight: $headingsFontWeight;
-  color: $headingsColor;
+  @if $headings-font-family { font-family: $headings-font-family; }
+  font-weight: $headings-font-weight;
+  color: $headings-color;
   /**
    * Optimized kerning for large font sizes
    * use this only on large font-sizes (f.e. headings) to avoid performance issues
