--- a/Ressources/Private/Sass/generic/_head.scss
+++ b/Ressources/Private/Sass/generic/_head.scss
@@ -21,7 +21,7 @@
 /* =============================================================================
 $ Border-Box
 ================================================================================ */
-* {
+*, *:before, *:after {
   @include box-sizing(border-box);
   @if $oldIE {
     /**
