--- a/Ressources/Private/Sass/main.scss
+++ b/Ressources/Private/Sass/main.scss
@@ -29,7 +29,7 @@ $package_name: t3b_frontend;
 // 2. "generic/_normalize"      - Nicolas Gallagher's normalize.css
 // 3. "generic/_widths"         - Human readable width classes from inuit.css
 // 4. "generic/_t3-general"     - TYPO3 related classes
-// 5. "generic/_brand"          - Generated brand classes like colors, font-familys & logos
+// 5. "generic/_brand"          - Generated brand classes like colors, font-families & logos
 // =============================================================================
 @import "generic/_head",
         "generic/_normalize",
