--- a/Ressources/Private/Sass/base/_media.scss
+++ b/Ressources/Private/Sass/base/_media.scss
@@ -29,7 +29,7 @@ img {
   font-style: italic; /* 2 */
   border: 0; /* 3 */
   vertical-align: middle; /* 4 */
-  @if $oldIE {
+  @if $legacy-normalizecss {
     -ms-interpolation-mode: bicubic; /* 5 */
   }
   &[height] { /* 1 */
