--- a/Ressources/Private/Sass/objects/_buttons.scss
+++ b/Ressources/Private/Sass/objects/_buttons.scss
@@ -20,7 +20,7 @@ $ Button Object
 .btn {
   @extend %btn;
   display: inline-block;
-  @if $oldIE {
+  @if $legacy-support-for-ie7 {
     *display: inline;
     *zoom: 1;
   }
