--- a/Ressources/Private/Sass/base/_lists.scss
+++ b/Ressources/Private/Sass/base/_lists.scss
@@ -49,7 +49,7 @@ dl {
     /**
      * Addresses margins set differently in IE6/7.
      */
-    margin: 0 0 0 40px;
+    margin: 0 0 0 rs(40);
   }
 }
 
