--- a/Ressources/Private/Sass/_settings/_media-queries.scss
+++ b/Ressources/Private/Sass/_settings/_media-queries.scss
@@ -11,12 +11,6 @@
 
 
 // =============================================================================
-// Variables
-// =============================================================================
-$units: 1px !default; // default units for 'screen' mixins - it must include a digit!
-
-
-// =============================================================================
 // Aviable mixins
 // =============================================================================
 // @include min-screen(width) {}              // shortcut for @media screen and (min-width ...)
@@ -29,19 +23,19 @@ $units: 1px !default; // default units for 'screen' mixins - it must include a d
 // Screen
 // =============================================================================
 @mixin screen($res-min, $res-max) {
-  @media screen and ( min-width: if(unitless($res-min), $res-min*$units, $res-min) ) and ( max-width: if(unitless($res-max), $res-max*$units, $res-max) ) {
+  @media screen and ( min-width: if(unitless($res-min), $res-min*$mq-unit, $res-min) ) and ( max-width: if(unitless($res-max), $res-max*$mq-unit, $res-max) ) {
     @content;
   }
 }
 
 @mixin max-screen($res) {
-  @media screen and ( max-width: if(unitless($res), $res*$units, $res) ) {
+  @media screen and ( max-width: if(unitless($res), $res*$mq-unit, $res) ) {
     @content;
   }
 }
 
 @mixin min-screen($res) {
-  @media screen and ( min-width: if(unitless($res), $res*$units, $res) ) {
+  @media screen and ( min-width: if(unitless($res), $res*$mq-unit, $res) ) {
     @content;
   }
 }
