--- a/Ressources/Private/Sass/_settings/_variables.scss
+++ b/Ressources/Private/Sass/_settings/_variables.scss
@@ -127,6 +127,10 @@ $body-background:       #fff !default;
 // the .site-content container or its background.
 $content-background:    #fff !default;
 
+// default units for media-query mixins - it must include a digit e.g.:
+// $mq-unit: 1em !default;
+$mq-unit: 1px !default;
+
 
 // =============================================================================
 // Design related variables
