Extend the usage of the text-direction variables for .dl--horizontal

--- a/Ressources/Private/Sass/base/_lists.scss
+++ b/Ressources/Private/Sass/base/_lists.scss
@@ -75,14 +75,14 @@ $ Horizontal definition abstraction
 .dl--horizontal {
   @extend .cf;
   dt {
-    float: left;
+    float: $start;
     width: 19%;
     overflow: hidden;
-    clear: left;
-    text-align: right;
+    clear: $start;
+    text-align: $end;
     @extend .text-break;
   }
   dd {
-    margin-left: 21%;
+    margin-#{$start}: 21%;
   }
 }
